--- a/css/main.scss
+++ b/css/main.scss
@@ -45,7 +45,7 @@ $on-laptop:        800px;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
-        "{{ site.theme }}";
+        "{{ site.theme }}",
         "base",
         "layout",
         "syntax-highlighting"
